add lorem ipsum

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Gracie Tempus</title>
-    <main></main>
+    <main>
     <h1>Projeto Integrador 2</h1>
+    <quote>Bebá água!</quote>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni hic, facilis iure ea cumque totam! Ad sint quas et saepe rem qui numquam ipsa placeat dicta necessitatibus. Voluptates, blanditiis.</p>
+    </main>
 </head>
 <body>
     
