inclusao da cor e tamanho da fonte

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     , initial-scale=1.0">
     <title>Gracie Tempus</title>
     <main>
-    <h1>Projeto Integrador 2</h1>
+    <h1 style="font-size: 50px;">Projeto Integrador 2</h1>
     <quote>Bebá água!</quote>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni hic, facilis iure ea cumque totam! Ad sint quas et saepe rem qui numquam ipsa placeat dicta necessitatibus. Voluptates, blanditiis.</p>
     </main>
 </head>
-<body>
+<body style="background-color: aquamarine;">
     
 </body>
 </html>
