mudei font title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Gracie Tempus</title>
+    <title style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Gracie Tempus</title>
     <main>
     <h1 style="font-size: 50px;text-align: justify;">Projeto Integrador 2</h1>
     <quote>Bebá água!</quote>
