--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p><i>Inventore</i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis magni hic, facilis iure ea cumque totam! Ad sint quas et saepe rem qui numquam ipsa placeat dicta necessitatibus. Voluptates, blanditiis.</p>
     </main>
 </head>
-<body style="background-color: aquamarine;">
+<body style="background-color: red;">
     
 </body>
 </html>
